--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+         default-src *; 
+         style-src 'self' 'unsafe-inline'; 
+         img-src https://*.stripe.com https://cdn.shopify.com;
+         script-src * 'self' https://checkout.stripe.com 'unsafe-inline'; 
+         connect-src  * 'self' https://checkout.stripe.com  ; 
+         frame-src * 'self'  https://checkout.stripe.com ; "
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
