--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Our mission is to collect unique & timeless design artifacts. From heritage to contemporary."
     />
     <meta
       http-equiv="Content-Security-Policy"
       content="
          default-src *; 
-         style-src 'self' 'unsafe-inline'; 
-         img-src https://*.stripe.com https://cdn.shopify.com;
-         script-src * 'self' https://checkout.stripe.com 'unsafe-inline'; 
-         connect-src  * 'self' https://checkout.stripe.com  ; 
-         frame-src * 'self'  https://checkout.stripe.com ; "
+         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+         img-src 'self' https://*.stripe.com https://github.com/joyjs/only-one-shop ;
+         script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com; 
+         connect-src  'self' https://checkout.stripe.com  ; 
+         frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/; "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- font -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+    </style>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,22 +40,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap"
-      rel="stylesheet"
-    />
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#eeece7" />
-    <meta name="msapplication-TileColor" content="#685858" />
-    <meta name="theme-color" content="#ffffff" />
-    <title>Shop Merch | Opens</title>
+
+    <title>Only One Shop | Collect unique & timeless design artifacts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
