--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="
          default-src *; 
          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-         img-src 'self' https://*.stripe.com https://github.com/joyjs/only-one-shop ;
+         img-src 'self' https://*.stripe.com;
          script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com; 
          connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com; 
          frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/; "
