--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
          default-src *; 
          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
          img-src 'self' https://*.stripe.com;
-         script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com; 
-         connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com; 
+         script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com https://www.googletagmanager.com/gtag/; 
+         connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com; 
          frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/; "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
