🔒️ Update content security polity: img-src, connect-src

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       content="
          default-src *; 
          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-         img-src 'self' https://*.stripe.com;
+         img-src 'self' https://*.stripe.com https://i.ibb.co;
          script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com https://www.googletagmanager.com/gtag/; 
-         connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com; 
+         connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com https://firebaseinstallations.googleapis.com; 
          frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/; "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
