--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
          img-src 'self' https://*.stripe.com https://i.ibb.co;
          script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com https://www.googletagmanager.com/gtag/; 
-         connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com https://firebaseinstallations.googleapis.com https://identitytoolkit.googleapis.com; 
+         connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com https://firebaseinstallations.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com; 
          frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/; "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
