--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
          img-src 'self' https://*.stripe.com https://i.ibb.co;
          script-src 'self' 'unsafe-inline' https://checkout.stripe.com https://*.stripe.com https://apis.google.com https://www.googletagmanager.com/gtag/; 
          connect-src  'self' https://checkout.stripe.com https://firestore.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com https://firebaseinstallations.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com; 
-         frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/; "
+         frame-src 'self' https://checkout.stripe.com https://*.stripe.com https://*.firebaseapp.com/;
+         font-src data: https://fonts.gstatic.com/;
+         "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
